# path-config

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
mrconfig/: __init__.py  __version__.py  loader.py  utils.py
mrconfig/loaders/: __init__.py
path_config/: loader.py  utils.py
tests/: test_load_config.py
